Allow vector indexes to support multiple entity tokens ()
* Rename FulltextSchemaDescriptor to SemenaticSearchSchemaDescriptor

* Allow for different, but equiv schema patterns to match

  For schema over property keys: k1, k2, ..., kn
  
  COMPLETE_ALL_TOKENS requires all properties to exist:
          k1 && k2 && ... && kn
  
  PARTIAL_ANY_TOKEN requires at least one property to exist:
          k1 || k2 || ... || kn
  
  However, when we only have a single property, k, these are effectively
  the same requirement. At least one is all of them.
  
  This has not been an issue in the past as we have no changed the
  SchemaPatternMatchingType on an index before; however, we are changing
  VECTOR indexes.
  
  Creating a new vector index, which could have multiple keys, but uses
  only one, should still through if an older preexisting vector index
  exists on the same schema. Thus special handling for the noted
  equivlence above has to be added to the descriptors hashCode and equal.

* Remove fulltext only assumptions on the schema descriptor

* Widen Collection<IndexProxy> to Iterable<IndexProxy>

* Allow vector indexes to support multiple entity tokens

* Tidy up the semantics in IndexCreatorImpl

* Restrict new schema in Operations, IntegrityValidator, and
  CommandCreator

* Refactor SchemaNameUtil::generateName

  We will be changing one of the values being hashed, thus all names would
  change; may as well use this opportunity to improve the area.
  
  * use strong better seed for hashing algorithm
  * group type information
  * use switch-expressions over switch-statements
  * use pattern matching switch rather than if-instanceof chains
  * use else ifs to skip unneeded checks

* Ensure effective pattern matching produces the same name

* Update generated index names in tests