@@ -87,61 +87,77 @@ public class SchemaNameUtil {
     public static String generateName(SchemaDescriptorSupplier rule, TokenNameLookup tokenNameLookup) {
         // NOTE to future maintainers: You probably want to avoid touching this function.
         // Last time this was changed, we had some 400+ tests to update.
-        HashFunction hf = HashFunction.incrementalXXH64();
-        long key = hf.initialise(Boolean.hashCode(rule instanceof ConstraintDescriptor));
-        key = hf.update(key, rule.schema().entityType().ordinal());
-        key = hf.update(key, rule.schema().schemaPatternMatchingType().ordinal());
-        switch (rule.schema().entityType()) {
+        final HashFunction hf = HashFunction.incrementalXXH64();
+
+        // common strong seed for distributing values across 64-bit space
+        // hex(floor(pow(2, 64) / goldenRatio))
+        long key = hf.initialise(0x9E3779B97F4A7C15L);
+
+        final SchemaDescriptor schema = rule.schema();
+        final int[] entityTokenIds = schema.getEntityTokenIds();
+        final int[] propertyKeyIds = schema.getPropertyIds();
+        key = hf.update(key, schema.entityType().ordinal());
+        key = hf.update(
+                key,
+                SchemaDescriptorImplementation.effectiveSchemaPatternMatchingTypeFeature(
+                        schema.schemaPatternMatchingType(), propertyKeyIds));
+        key = switch (schema.entityType()) {
             case NODE ->
-                key = hf.updateWithArray(key, rule.schema().getEntityTokenIds(), id -> tokenNameLookup
+                hf.updateWithArray(key, entityTokenIds, id -> tokenNameLookup
                         .labelGetName(id)
                         .hashCode());
             case RELATIONSHIP ->
-                key = hf.updateWithArray(key, rule.schema().getEntityTokenIds(), id -> tokenNameLookup
+                hf.updateWithArray(key, entityTokenIds, id -> tokenNameLookup
                         .relationshipTypeGetName(id)
                         .hashCode());
-        }
-        key = hf.updateWithArray(key, rule.schema().getPropertyIds(), id -> tokenNameLookup
+        };
+        key = hf.updateWithArray(key, propertyKeyIds, id -> tokenNameLookup
                 .propertyKeyGetName(id)
                 .hashCode());
 
-        if (rule instanceof IndexRef<?> indexRef) {
-            key = hf.update(key, indexRef.getIndexType().getTypeNumber());
-            key = hf.update(key, Boolean.hashCode(indexRef.isUnique()));
-            return String.format("index_%x", hf.toInt(hf.finalise(key)));
-        }
-        if (rule instanceof ConstraintDescriptor constraint) {
-            key = hf.update(key, constraint.type().ordinal());
-            if (constraint.isIndexBackedConstraint()) {
-                key = hf.update(
-                        key, constraint.asIndexBackedConstraint().indexType().getTypeNumber());
+        key = hf.update(key, Boolean.hashCode(rule instanceof ConstraintDescriptor));
+        return switch (rule) {
+            case IndexRef<?> index -> {
+                key = hf.update(key, Boolean.hashCode(index.isUnique()));
+                key = hf.update(key, index.getIndexType().getTypeNumber());
+                yield "index_%x".formatted(hf.toInt(hf.finalise(key)));
             }
-            if (constraint.enforcesPropertyType()) {
-                key = hf.update(
-                        key,
-                        constraint.asPropertyTypeConstraint().propertyType().hashCode());
+
+            case ConstraintDescriptor constraint -> {
+                key = hf.update(key, constraint.type().ordinal());
+                if (constraint.isIndexBackedConstraint()) {
+                    key = hf.update(
+                            key,
+                            constraint.asIndexBackedConstraint().indexType().getTypeNumber());
+                } else if (constraint.enforcesPropertyType()) {
+                    key = hf.update(
+                            key,
+                            constraint.asPropertyTypeConstraint().propertyType().hashCode());
+                } else if (constraint.isRelationshipEndpointLabelConstraint()) {
+                    var relEndpointLabelConstraint = constraint.asRelationshipEndpointLabelConstraint();
+                    key = hf.update(
+                            key,
+                            tokenNameLookup
+                                    .labelGetName(relEndpointLabelConstraint.endpointLabelId())
+                                    .hashCode());
+                    key = hf.update(
+                            key, relEndpointLabelConstraint.endpointType().ordinal());
+                } else if (constraint.isNodeLabelExistenceConstraint()) {
+                    key = hf.update(
+                            key,
+                            tokenNameLookup
+                                    .labelGetName(constraint
+                                            .asNodeLabelExistenceConstraint()
+                                            .requiredLabelId())
+                                    .hashCode());
+                }
+
+                yield "constraint_%x".formatted(hf.toInt(hf.finalise(key)));
             }
-            if (constraint.isRelationshipEndpointLabelConstraint()) {
-                var relEndpointLabelConstraint = constraint.asRelationshipEndpointLabelConstraint();
-                key = hf.update(
-                        key,
-                        tokenNameLookup
-                                .labelGetName(relEndpointLabelConstraint.endpointLabelId())
-                                .hashCode());
-                key = hf.update(key, relEndpointLabelConstraint.endpointType().ordinal());
-            }
-            if (constraint.isNodeLabelExistenceConstraint()) {
-                key = hf.update(
-                        key,
-                        tokenNameLookup
-                                .labelGetName(constraint
-                                        .asNodeLabelExistenceConstraint()
-                                        .requiredLabelId())
-                                .hashCode());
-            }
-            return String.format("constraint_%x", hf.toInt(hf.finalise(key)));
-        }
-        throw new IllegalArgumentException(
-                "Don't know how to generate a name for this SchemaDescriptorSupplier implementation: " + rule + ".");
+
+            default ->
+                throw new IllegalArgumentException("Don't know how to generate a name for this %s implementation: %s."
+                        .formatted(SchemaDescriptorSupplier.class.getSimpleName(), rule));
+        };
     }
 }
